--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    background-color: rgb(35, 32, 32);
+}
+h1{
+  font-family: 'Climate Crisis', cursive;
+}
+
+::-webkit-scrollbar {
+    width: 16px;
+    height: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #e4e4e4;
+    border-radius: 100px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #505050;
+    border-radius: 100px;
+  }
