added dialogue feature and fixed an issue where data not loading on page refresh

--- a/src/app/pages/dialogue-info/dialogue-info.component.css
+++ b/src/app/pages/dialogue-info/dialogue-info.component.css
@@ -20,6 +20,19 @@ body {
   box-sizing: border-box;
 }
 
+.image{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.desc{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .inp {
   position: relative;
   margin: auto;
@@ -99,4 +112,7 @@ body {
 
 .message{
   margin-bottom: 3%;
+  background-color: rgb(46, 46, 46);
+  border-radius: 5px;
+  padding: 1% 2%;
 }
