--- a/src/app/utils/navbar/navbar.component.html
+++ b/src/app/utils/navbar/navbar.component.html
@@ -68,6 +68,7 @@
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
+            style="margin-left: 30px;"
           >
             {{authorize.username}}
           </a>
