issues with login check fixed

--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -50,6 +50,7 @@
               class="d-flex flex-row align-items-center justify-content-between"
             >
               <button class="btn btn-primary">Create Account</button>
+              <a routerLink="">Back to login</a>
             </div>
           </form>
         </div>
