--- a/src/app/utils/navbar/navbar.component.html
+++ b/src/app/utils/navbar/navbar.component.html
@@ -59,7 +59,7 @@
           <a class="nav-link" routerLink="search">Search</a>
         </li>
         <li class="nav-item sub-items">
-          <a class="nav-link" routerLink="contact-us">Contact Us</a>
+          <a class="nav-link" routerLink="my-bookshelf">My Bookshelf</a>
         </li>
         <li class="nav-item dropdown sub-items">
           <a
@@ -73,7 +73,7 @@
             {{authorize.username}}
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="my-bookshelf">My Bookshelf</a></li>
+            <li><a class="dropdown-item" routerLink="contact-us">Contact Us</a></li>
             <li><hr class="dropdown-divider" /></li>
             <li><a class="dropdown-item" routerLink="dialogues">View Dialogues</a></li>
             <li><hr class="dropdown-divider" /></li>
