--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -13,6 +13,7 @@
             type="text"
             placeholder="Your name"
             class="form-control"
+            [(ngModel)]="name"
           />
         </div>
       </div>
@@ -26,6 +27,7 @@
             type="text"
             placeholder="Your email"
             class="form-control"
+            [(ngModel)]="email"
           />
         </div>
       </div>
@@ -39,13 +41,14 @@
             name="message"
             placeholder="Please enter your message here..."
             rows="5"
+            [(ngModel)]="desc"
           ></textarea>
         </div>
       </div>
       <!-- Form actions -->
       <div class="form-group">
         <div class="col-md-12 text-right">
-          <button type="submit" class="btn btn-light btn-lg">Submit</button>
+          <button (click)="send()" type="submit" class="btn btn-light btn-lg">Submit</button>
         </div>
       </div>
     </fieldset>
