--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div id="homeCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="3000">
-      <h1>Welcome To The Literary Lounge</h1>
+      <h1>Welcome To The Book Seeker</h1>
     </div>
     <div class="carousel-item" data-bs-interval="3000">
       <h2>
