--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center title">The Literary Lounge</h1>
+<h1 class="text-center title">Book Seeker</h1>
 <div class="container">
   <div class="row">
     <div class="col-lg-6 signup">
